src/js/custom_elements/app/app.scss
moon-app {
  --background-0: #{rgba(white, 0)};
  --background-1: #{rgba(white, .15)};
  --background-2: #{rgba(white, .25)};
  --background-3: #{rgba(white, .7)};
  
  --app-gap: 0 .5rem;
  --app-grid: '. phase .' 2fr '. percent .' 1fr 'charts charts charts' '. date .' 1fr 'prev location next' 2fr / var(--controls-size) minmax(auto, var(--charts-max-size)) var(--controls-size);
  --chart-size: 14.5rem;
  --charts-max-size: 30rem;
  --controls-size: 2.75rem;
  
  --fineprint: .75em;
  --transition: .3s;
  --transition-intro: 1s;

  @media (min-width: 36rem) {
    --app-gap: 1rem;
    --app-grid: '. phase .' 2fr '. percent .' 1fr 'prev charts next' '. date .' 1fr '. location .' 2fr / minmax(var(--controls-size), 1fr) minmax(var(--chart-size), var(--charts-max-size)) minmax(var(--controls-size), 1fr);
    --fineprint: .875em;
  }

  block-size: 100dvh;
  display: grid;
  gap: var(--app-gap);
  grid: var(--app-grid);
  inline-size: 100vw;
}

[id='phase'] {
  grid-area: phase;
}

[id='percent'] {
  grid-area: percent;
}

:is(donut-chart, moon-photo, ticks-chart) {
  animation: scaleIn var(--transition-intro) ease;
  aspect-ratio: 1;  
  grid-area: charts;
  place-self: center;
}

[data-direction='prev'] {
  animation: slideInLeft var(--transition-intro) ease;
  grid-area: prev;
}

[data-direction='next'] {
  animation: slideInRight var(--transition-intro) ease;
  grid-area: next;
}

[id='date'] {
  animation: slideInUp var(--transition-intro) ease;
  display: block;
  grid-area: date;
  padding-block: .5rem;
  padding-inline: 1rem;
  place-self: center;
  transition: color var(--transition), transform var(--transition);
  white-space: nowrap;

  &:link,
  &:visited {
    color: white;
  }

  &:focus-visible {
    color: rgba(white, .7);
  }

  &.touch {
    transform: scale(.8);
  }

  @media (any-hover: hover) {
    &:hover {
      color: rgba(white, .7);
    }

    &:active {
      transform: scale(.8);
    }
  }

  &[data-today] {
    font-variation-settings: 'wght' 600;
    pointer-events: none;
  }
}

[id='phase'],
[id='percent'] {
  animation: slideInDown var(--transition-intro) ease;
  font-size: .875em;
}

[id='phase'] {
  color: white;
  place-self: end center;
}

[id='percent'] {
  color: rgba(white, .7);
  margin-block: .5rem 0;
  place-self: start center;
}

// Prev-next buttons.
[data-direction] {
  aspect-ratio: 1;
  background-color: var(--background-1);
  border-radius: var(--controls-size);
  display: grid;
  inline-size: var(--controls-size);
  place-content: center;
  place-self: center;
  transition: background-color var(--transition), transform var(--transition);

  &:focus-visible {
    background-color: var(--background-2);
  }

  &.touch {
    transform: scale(.8);
  }

  @media (any-hover: hover) {
    &:hover {
      background-color: var(--background-2);
    }  

    &:active {
      transform: scale(.8);
    }
  }

  path {
    fill: none;
    stroke: white;
    stroke-width: 2;
  }

  svg {
    inline-size: 1.5rem;
    transition: transform var(--transition);
  }
}

